fix text wrapping

--- a/public/styles.css
+++ b/public/styles.css
@@ -90,7 +90,7 @@ header {
   padding-top: 18px;
 }
 .textbox-group h2 {
-  font-size: 38px;
+  font-size: 34px;
   margin: 0;
 }
 .textbox-group p {
